// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`composition hook should return with LayoutSet props 1`] = `
Object {
  "className": "css-wqazo2 css-19lk9fr css-1pwrqjj css-3ekj6a fp-Box fp-LayoutSet fp-Set",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 test fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`defaultProps should render correctly for isHorizontal 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:768px) {
  .emotion-5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media screen and (min-width:768px) {
  .emotion-5 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin-left: -2rem;
    margin-top: -2rem;
  }
}

@media screen and (max-width:768px) {
  .emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
    margin-bottom: 2rem;
  }
}

@media screen and (min-width:768px) {
  .emotion-5.emotion-5.emotion-5 > * {
    margin-left: 2rem;
    margin-top: 2rem;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides LayoutSet.child.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides LayoutSet.child.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > * {
  background-color: red;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides LayoutSet.child.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-5.emotion-5.emotion-5 > * {
  background-color: red;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides LayoutSet.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides LayoutSet.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-5 {
  background-color: red;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`overrides LayoutSet.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  background-color: red;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly for a horizontal set 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:768px) {
  .emotion-5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media screen and (min-width:768px) {
  .emotion-5 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    margin-left: -2rem;
    margin-top: -2rem;
  }
}

@media screen and (max-width:768px) {
  .emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
    margin-bottom: 2rem;
  }
}

@media screen and (min-width:768px) {
  .emotion-5.emotion-5.emotion-5 > * {
    margin-left: 2rem;
    margin-top: 2rem;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

.emotion-7 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-7 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming LayoutSet.css.child.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming LayoutSet.css.child.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > * {
  background-color: red;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming LayoutSet.css.child.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-5.emotion-5.emotion-5 > * {
  background-color: red;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming LayoutSet.css.horizontal should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-4 {
  display: block;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming LayoutSet.css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

.emotion-5 {
  background-color: red;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;

exports[`theming LayoutSet.css.vertical should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  background-color: red;
}

.emotion-5.emotion-5.emotion-5 > *:not(:last-child) {
  margin-bottom: 2rem;
}

<div
  class="emotion-4 emotion-5 emotion-0 emotion-1 fp-Box fp-LayoutSet fp-Set"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    hello
  </div>
  <div
    class="emotion-0 emotion-1 fp-Box"
  >
    world
  </div>
</div>
`;
